--- a/contact.html
+++ b/contact.html
@@ -3,43 +3,155 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
   <title>Contact · Terry Cole Podcast Studio</title>
 
-  <!-- ===== Open Graph ===== -->
+  <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Contact · Terry Cole Podcast Studio">
-  <meta property="og:description" content="Get in touch regarding audio projects, archival materials, and broadcast history.">
+  <meta property="og:description" content="Get in touch regarding audio projects, archival materials, and broadcast history connected to the Terry Cole Podcast Studio.">
   <meta property="og:image" content="https://terrycolepodcaststudio.com/og-image.png">
   <meta property="og:url" content="https://terrycolepodcaststudio.com/contact.html">
   <meta property="og:site_name" content="Terry Cole Podcast Studio">
 
-  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
 
-  <!-- Favicon -->
   <link rel="icon" href="/favicon.ico">
 
-  <!-- ===== Broadcast Theme CSS ===== -->
-  <link rel="stylesheet" href="/broadcast.css">
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
+                   Roboto, Helvetica, Arial, sans-serif;
+      margin: 0;
+      background: #ffffff;
+      color: #111;
+      line-height: 1.65;
+    }
+
+    .container {
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 32px 24px;
+    }
+
+    .site-header {
+      margin-bottom: 40px;
+    }
+
+    .branding {
+      display: flex;
+      align-items: center;
+      gap: 16px;
+      margin-bottom: 12px;
+    }
+
+    .site-logo {
+      width: 64px;
+      height: auto;
+    }
+
+    .site-title h1 {
+      margin: 0;
+      font-size: 20px;
+      font-weight: 700;
+    }
+
+    .site-parent {
+      margin: 2px 0 0;
+      font-size: 14px;
+      color: #555;
+    }
+
+    .site-nav a {
+      text-decoration: none;
+      color: #555;
+      margin-right: 14px;
+      font-size: 15px;
+    }
+
+    .site-nav a.active {
+      color: #8b0000;
+      font-weight: 600;
+    }
+
+    h2 {
+      font-size: 28px;
+      margin-top: 0;
+    }
+
+    .rule {
+      border-bottom: 3px solid #8b0000;
+      margin: 18px 0 32px;
+    }
+
+    h3 {
+      font-size: 1.35rem;
+      color: #8b0000;
+      margin-top: 44px;
+    }
+
+    .callout {
+      background: #f7f7f7;
+      border-left: 5px solid #8b0000;
+      padding: 22px 26px;
+      margin: 36px 0;
+    }
+
+    input, textarea, select {
+      width: 100%;
+      max-width: 520px;
+      padding: 8px;
+      font-size: 15px;
+      margin-top: 4px;
+    }
+
+    textarea {
+      max-width: 640px;
+    }
+
+    button {
+      background: #8b0000;
+      color: #fff;
+      border: none;
+      padding: 10px 18px;
+      font-size: 15px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background: #6f0000;
+    }
+
+    footer {
+      margin-top: 70px;
+      padding-top: 20px;
+      border-top: 1px solid #ccc;
+      font-size: 0.85rem;
+      color: #555;
+    }
+
+    @media (max-width: 640px) {
+      .branding {
+        flex-direction: column;
+        text-align: center;
+      }
+
+      .site-logo {
+        width: 72px;
+      }
+    }
+  </style>
 </head>
 
 <body>
 <div class="container">
 
-  <!-- ===== HEADER (SOURCE-OF-TRUTH HEADER) ===== -->
+  <!-- HEADER -->
   <header class="site-header">
     <div class="branding">
-      <img
-        src="/logo.jpg"
-        alt="Terry Cole Podcast Studio logo"
-        class="site-logo"
-      />
+      <img src="/logo.jpg" alt="Terry Cole Podcast Studio logo" class="site-logo">
       <div class="site-title">
         <h1>Terry Cole Podcast Studio</h1>
-        <p class="site-parent">
-          Part of the Terry Cole Broadcast &amp; Recording Studio
-        </p>
+        <p class="site-parent">Part of the Terry Cole Broadcast &amp; Recording Studio</p>
       </div>
     </div>
 
@@ -51,7 +163,7 @@
     </nav>
   </header>
 
-  <!-- ===== MAIN CONTENT ===== -->
+  <!-- MAIN -->
   <main>
     <h2>Contact</h2>
     <div class="rule"></div>
@@ -64,44 +176,35 @@
     <h3>📬 Get in Touch</h3>
 
     <div class="callout">
-      <form
-        action="mailto:bhamblin@terrycolepodcaststudio.com"
-        method="post"
-        enctype="text/plain"
-      >
+      <form action="mailto:bhamblin@terrycolepodcaststudio.com" method="post" enctype="text/plain">
 
         <p>
-          <label>
-            <strong>Name</strong><br>
+          <label><strong>Name</strong><br>
             <input type="text" name="Name" required>
           </label>
         </p>
 
         <p>
-          <label>
-            <strong>Email</strong><br>
+          <label><strong>Email</strong><br>
             <input type="email" name="Email" required>
           </label>
         </p>
 
         <p>
-          <label>
-            <strong>Regarding</strong><br>
-            <select name="Topic" required>
-              <option value="">Select…</option>
-              <option value="General">General inquiry</option>
-              <option value="Terry Cole’s Audio Archives">Terry Cole’s Audio Archives</option>
-              <option value="OSSB Inside and Out">OSSB Inside and Out</option>
-              <option value="Brendon Hamblin’s Audio Projects">Brendon Hamblin’s Audio Projects</option>
-              <option value="Andy & Steph’s Top Ten Podcast">Andy & Steph’s Top Ten Podcast</option>
-              <option value="The Andy & Brendon Podcast">The Andy & Brendon Podcast</option>
+          <label><strong>Send To</strong><br>
+            <select name="Inquiry Type">
+              <option>General Inquiry</option>
+              <option>Terry Cole’s Audio Archives</option>
+              <option>OSSB Inside and Out</option>
+              <option>Brendon Hamblin’s Audio Projects</option>
+              <option>Andy &amp; Steph’s Top Ten Podcast</option>
+              <option>The Andy &amp; Brendon Podcast</option>
             </select>
           </label>
         </p>
 
         <p>
-          <label>
-            <strong>Message</strong><br>
+          <label><strong>Message</strong><br>
             <textarea name="Message" rows="5" required></textarea>
           </label>
         </p>
@@ -109,7 +212,7 @@
         <p>
           <label>
             <input type="checkbox" name="Reply Requested" value="Yes">
-            Would you like a reply?
+            I would like a response to this message
           </label>
         </p>
 
@@ -121,32 +224,24 @@
     </div>
 
     <h3>🎙️ Submissions &amp; Inquiries</h3>
+
     <ul>
       <li>Historical recordings or broadcast materials related to Terry Cole</li>
       <li>Information supporting preservation of radio history</li>
       <li>Questions about existing audio projects</li>
     </ul>
 
+    <p>Messages are reviewed with care. Responses are provided when requested.</p>
+
     <h3>📍 Location</h3>
-    <p>
-      Based in <strong>Ohio, United States</strong>
-    </p>
+    <p>The Terry Cole Podcast Studio is based in <strong>Marion Ohio, United States</strong>.</p>
   </main>
 
-  <!-- ===== FOOTER ===== -->
+  <!-- FOOTER -->
   <footer>
-    <p>
-      <em>Broadcast legacy. Recorded with care.</em><br>
-      Studio updates and related materials are occasionally shared on
-      <a href="https://www.facebook.com/TerryColePodcastStudio" target="_blank" rel="noopener">
-        Facebook
-      </a>.
-    </p>
-
-    <p>
-      © Terry Cole Podcast Studio<br>
-      Part of the Terry Cole Broadcast &amp; Recording Studio
-    </p>
+    <p><em>Broadcast legacy. Recorded with care.</em></p>
+    <p>© Terry Cole Podcast Studio<br>
+    Part of the Terry Cole Broadcast &amp; Recording Studio</p>
   </footer>
 
 </div>
